--- a/public/assets/stylesheets/bignothing.css
+++ b/public/assets/stylesheets/bignothing.css
@@ -79,3 +79,26 @@ h1, h2, h3 {
 h1, h2 {
 	border-bottom: 2px solid rgba(0,0,0,0.4);
 }
+h1 {
+    margin-top: 0px;
+}
+.center {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
+#loginwindow {
+    width: 400px;
+    height: 400px;
+    border-radius: 20px;
+    background-image: linear-gradient(to bottom, #f5f5f5 0%,#eeeeee 35%,#cccccc 100%);
+    padding: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 70px;
+}
+#loginwindow input, #loginwindow table {
+    width: 100%;
+}
