--- a/modules/authentication/assets/login.scss
+++ b/modules/authentication/assets/login.scss
@@ -1,8 +1,7 @@
-#contentstream {
+#content {
   width: 400px;
   height: 400px;
   border-radius: 20px;
-  background-image: linear-gradient(to bottom, #f5f5f5 0%,#eeeeee 35%,#cccccc 100%);
   padding: 20px;
   margin-left: auto;
   margin-right: auto;
