--- a/public/assets/stylesheets/bignothing.scss
+++ b/public/assets/stylesheets/bignothing.scss
@@ -55,6 +55,8 @@ body {
     padding: 5px;
     font-family: Mulders Handwriting;
     font-size: 1.3em;
+    position: sticky;
+    top: 0;
 }
 .fixed #topbar {
 	position: fixed;
@@ -72,7 +74,7 @@ body {
 	visibility: hidden;
 }
 
-#contentstream {
+#content {
 	background-color: white;
     margin-top: 20px;
 	margin-left: auto;
@@ -80,6 +82,7 @@ body {
 	width: calc(100% - 60px);
 	padding: 10px;
 	box-shadow: 0px 0px 15px rgba(0,0,0,0.1);
+    background-image: linear-gradient(to bottom, #f5f5f5 0%,#eeeeee 35%,#cccccc 100%);
 }
 
 .icon {
