--- a/modules/authentication/assets/login.scss
+++ b/modules/authentication/assets/login.scss
@@ -1,14 +1,24 @@
 #content {
-  width: 400px;
-  height: 400px;
-  border-radius: 20px;
-  padding: 20px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 70px;
-  display: none;
+    width: 400px;
+    height: 400px;
+    border-radius: 20px;
+    padding: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 70px;
+    display: none;
 
-  input, table {
-    width: 100%;
-  }
+    input, table {
+        width: 100%;
+    }
+}
+#register_data {
+    input[name=login] {
+        &.taken {
+            background-color: red;
+        }
+        &.free {
+            background-color: lightgreen;
+        }
+    }
 }
